Make mod compatible with Java 8.